Bug 362832 - Changing volume with this widget does not preserve left/right balance
Summary: Changing volume with this widget does not preserve left/right balance
Status: RESOLVED FIXED
Alias: None
Product: plasma-pa
Classification: Unmaintained
Component: kcm (other bugs)
Version First Reported In: 5.5.5
Platform: Ubuntu Linux
: NOR minor
Target Milestone: ---
Assignee: David Rosca
URL:
Keywords:
: 363772 (view as bug list)
Depends on:
Blocks:
 
Reported: 2016-05-09 03:02 UTC by Ron Weber
Modified: 2017-05-06 13:37 UTC (History)
7 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.10.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ron Weber 2016-05-09 03:02:23 UTC
I have a defective pair of headphones where one is significantly louder than the other.  As a temporary solution, I adjust the left/right channels of that sink in pavucontrol to compensate.  However, unlike kmix, this plasmoid (and whatever changes the volume when I use the keyboard volume keys) sets the left and right channels to be the same.  It would make sense to keep the ratio between them the same, or at least the difference like kmix.

Reproducible: Always

Steps to Reproduce:
1. Set the left and right channel to different volumes (using pavucontrol, etc)
2. Adjust the volume using this plasmoid.

Actual Results:  
The left and right channel are set to the same volume

Expected Results:  
The balance between left and right is preserved when changing the volume. (See kmix)
Comment 1 David Rosca 2016-06-01 11:10:29 UTC
*** Bug 363772 has been marked as a duplicate of this bug. ***
Comment 2 zenw 2016-08-05 10:12:01 UTC
Same here, renders it useless to adjust volume level by shortcuts or the widget, as left-right balance is not kept. It is really annoying and should be fixed.
Comment 3 David Rosca 2017-05-06 13:37:03 UTC
Git commit 462628981947e298c5785864ee709bb1bf24e784 by David Rosca.
Committed on 06/05/2017 at 13:35.
Pushed by drosca into branch 'master'.

Preserve channel balance when changing volume

Differential Revision: https://phabricator.kde.org/D5546

M  +2    -1    src/context.h
M  +1    -1    src/volumeobject.cpp

https://commits.kde.org/plasma-pa/462628981947e298c5785864ee709bb1bf24e784