Preserve channel balance when changing volume

BUG: 362832

Differential Revision: https://phabricator.kde.org/D5546