src/context.h
@@ -96,8 +96,9 @@ public:
         newVolume = qBound<qint64>(0, newVolume, PA_VOLUME_MAX);
         pa_cvolume newCVolume = cVolume;
         if (channel == -1) { // -1 all channels
+            const qint64 diff = newVolume - pa_cvolume_avg(&cVolume);
             for (int i = 0; i < newCVolume.channels; ++i) {
-                newCVolume.values[i] = newVolume;
+                newCVolume.values[i] = qBound<qint64>(0, newCVolume.values[i] + diff, PA_VOLUME_MAX);
             }
         } else {
             Q_ASSERT(newCVolume.channels > channel);
